--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/Users/vitor/Downloads/dinamicaXP/lib/postgresql-42.2.4.jar">
+	<classpathentry kind="lib" path="C:/Users/lucas.bessegato/Downloads/postgresql-42.2.27.jre6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
