--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="lib/postgresql-42.2.4.jar">
+	<classpathentry kind="lib" path="C:/Users/lucas.bessegato/Desktop/greenway/lib/postgresql-42.6.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
